PCHR-3817: avoid overflow of display name on personal details block in 'My Details page'

--- a/civihr_default_theme/scss/pages/_hr-details.scss
+++ b/civihr_default_theme/scss/pages/_hr-details.scss
@@ -140,6 +140,8 @@
     }
 
     > * {
+      overflow: hidden;
+      text-overflow: ellipsis;
       width: 100%;
     }
   }
